[gd_scene format=3 uid="uid://cdxokteuc1hu5"]

[ext_resource type="Script" uid="uid://bih70uterwg82" path="res://ui/menus/settings_menu.gd" id="1_sm"]
[ext_resource type="PackedScene" uid="uid://b8x7k1n2m3p4" path="res://ui/common/ActionButton.tscn" id="2_btn"]
[ext_resource type="Texture2D" uid="uid://bgf14khyl2soq" path="res://ui/Assets/sketch1769872517892.png" id="3_h5gpx"]
[ext_resource type="Texture2D" uid="uid://denqyxu5aoa0k" path="res://assets/ui/FullScreen.png" id="3_ieml6"]

[node name="SettingsMenu" type="Control" unique_id=1077629402]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sm")

[node name="ColorRect" type="ColorRect" parent="." unique_id=266261575]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8666667)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1876339195]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -169.0
offset_right = 91.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1568487, 1.1568487)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="MarginContainer" unique_id=978185149]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 20
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBox" unique_id=1934961961]
layout_mode = 2
texture = ExtResource("3_h5gpx")
expand_mode = 5

[node name="Spacer" type="Control" parent="MarginContainer/VBox" unique_id=868710608]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FullscreenButton" parent="MarginContainer/VBox" unique_id=1530158898 instance=ExtResource("2_btn")]
unique_name_in_owner = true
layout_mode = 2
text = "FULLSCREEN: OFF"
icon = ExtResource("3_ieml6")
expand_icon = true

[node name="BackButton" parent="MarginContainer/VBox" unique_id=699277007 instance=ExtResource("2_btn")]
unique_name_in_owner = true
layout_mode = 2
text = "BACK"

[node name="QuitButton" parent="MarginContainer/VBox" unique_id=1260811072 instance=ExtResource("2_btn")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "QUIT TO MENU"
